





import java.util.List;
import java.util.ArrayList;

public class opf_Metadata  {






    private opf_Package opf_package;


    public opf_Metadata(
    ) {
    }



    public opf_Package getOpf_package() {
        return opf_package;
    }

    public void setOpf_package(opf_Package opf_package) {
        this.opf_package = opf_package;
    }

}