





import java.util.List;
import java.util.ArrayList;

public class opf_Title  {






    private opf_Metadata opf_metadata;


    public opf_Title(
    ) {
    }



    public opf_Metadata getOpf_metadata() {
        return opf_metadata;
    }

    public void setOpf_metadata(opf_Metadata opf_metadata) {
        this.opf_metadata = opf_metadata;
    }

}